# dmbcs-kraken-api

./: CMakeLists.txt  INSTALL  NEWS  README.md  configure.ac  dmbcs-kraken-api.pc.in  dmbcs-kraken-api.texi  makefile.am
src/: crypto.cc  curl.cc  dmbcs-kraken-api.cc  dmbcs-kraken-api.h  makefile.am
